<resources>
    <string name="app_name">SQLiteDemo</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="first_name">First Name</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="user_details">User Details</string>
</resources>